Заготовка под фильтр

--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -404,6 +404,10 @@ OBJS-$(CONFIG_SPECTRUMSYNTH_FILTER)          += vaf_spectrumsynth.o
 OBJS-$(CONFIG_AMOVIE_FILTER)                 += src_movie.o
 OBJS-$(CONFIG_MOVIE_FILTER)                  += src_movie.o
 
+
+# colorbar sources
+OBJS-$(CONFIG_EDGEDETECT_FILTER)             += vf_colorbar.o
+
 # Windows resource file
 SLIBOBJS-$(HAVE_GNU_WINDRES)                 += avfilterres.o
 
